--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,16 @@
 spring.application.name=demo
 
-spring.h2.console.path=/h2-console
 
-# Use H2 in-memory database
-spring.datasource.url=jdbc:h2:mem:sanctions_db
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
+# MySQL Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/sanctions_db?useSSL=false&serverTimezone=UTC
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
 spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 
-# Enable H2 Console
-spring.h2.console.enabled=true
 # Show SQL queries in the console
 spring.jpa.show-sql=true
-
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
