--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,7 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 
 spring.jpa.properties.hibernate.format_sql=true
+
+
+logging.level.root=INFO
+logging.level.org.springframework=INFO
