--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,9 +15,18 @@ spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
-
+#batch stuff
+spring.batch.jdbc.initialize-schema=always
+spring.batch.job.enabled=false
 spring.jpa.properties.hibernate.format_sql=true
 
 
 logging.level.root=INFO
 logging.level.org.springframework=INFO
+
+
+#debug for the logger slf4j
+logging.level.com.example.demo=DEBUG
+
+#entity manager factory not closed prematurely
+spring.jpa.open-in-view=false
