added couple of logs in the batchconfig class

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.org.springframework.transaction=TRACE
 
 #batch stuff
 spring.batch.jdbc.initialize-schema=always
@@ -30,3 +31,6 @@ logging.level.com.example.demo=DEBUG
 
 #entity manager factory not closed prematurely
 spring.jpa.open-in-view=false
+
+
+
