--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,11 +15,12 @@ spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 logging.level.org.springframework.transaction=TRACE
-
+spring.jpa.properties.hibernate.format_sql=true
 #batch stuff
 spring.batch.jdbc.initialize-schema=always
-spring.batch.job.enabled=false
-spring.jpa.properties.hibernate.format_sql=true
+spring.batch.job.enabled=true
+
+logging.level.org.springframework.batch=INFO
 
 
 logging.level.root=INFO
@@ -31,6 +32,14 @@ logging.level.com.example.demo=DEBUG
 
 #entity manager factory not closed prematurely
 spring.jpa.open-in-view=false
+
+spring.datasource.hikari.auto-commit=true
+
+#Enable rollback logs
+logging.level.org.springframework.transaction.interceptor=TRACE
+
+
+
 
 
 
