--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ logging.level.org.springframework.transaction=TRACE
 spring.jpa.properties.hibernate.format_sql=true
 #batch stuff
 spring.batch.jdbc.initialize-schema=always
-spring.batch.job.enabled=false
+spring.batch.job.enabled=true
 
 logging.level.org.springframework.batch=INFO
 
