--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,6 +40,8 @@ logging.level.org.springframework.transaction.interceptor=TRACE
 
 #--------------------------------------------- data api
 
+import.data.url=https://data.opensanctions.org/datasets/20250413/peps/targets.simple.csv
+
 
 
 
