--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,7 +40,7 @@ logging.level.org.springframework.transaction.interceptor=TRACE
 
 #--------------------------------------------- data api
 
-import.data.url=https://data.opensanctions.org/datasets/20250413/peps/targets.simple.csv
+import.data.urls=https://data.opensanctions.org/datasets/20250413/peps/targets.simple.csv,https://data.opensanctions.org/datasets/20250422/securities/securities.csv,https://data.opensanctions.org/datasets/20250422/crime/targets.simple.csv
 
 
 
