--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=demo
 
-
+server.port=9090
 # MySQL Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/sanctions_db?useSSL=false&serverTimezone=UTC
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -40,7 +40,7 @@ logging.level.org.springframework.transaction.interceptor=TRACE
 
 #--------------------------------------------- data api
 
-import.data.urls=https://data.opensanctions.org/datasets/20250413/peps/targets.simple.csv,https://data.opensanctions.org/datasets/20250422/securities/securities.csv,https://data.opensanctions.org/datasets/20250422/crime/targets.simple.csv
+import.data.url=https://data.opensanctions.org/datasets/20250413/peps/targets.simple.csv,https://data.opensanctions.org/datasets/20250422/securities/securities.csv
 
 
 
