fixed urls, automatically saving files in data folder

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,8 +40,9 @@ logging.level.org.springframework.transaction.interceptor=TRACE
 
 #--------------------------------------------- data api
 
-import.data.url=https://data.opensanctions.org/datasets/20250413/peps/targets.simple.csv,https://data.opensanctions.org/datasets/20250422/securities/securities.csv
+import.data.url=https://data.opensanctions.org/datasets/latest/peps/targets.simple.csv,https://data.opensanctions.org/datasets/latest/securities/securities.csv,https://data.opensanctions.org/datasets/latest/crime/targets.simple.csv
 
+import.data.folder=C:\\Users\\HP\\OneDrive\\Desktop\\data
 
 
 
